--- a/todo_login.html
+++ b/todo_login.html
@@ -30,7 +30,7 @@
                         <input type="text" class="form-control" name="password" placeholder="비밀번호" aria-label="Password" maxlength="16">
                     </div>
                     <div class="input-row" id="button-area">
-                        <button class="primary-button btn btn-success" id="login-button">
+                        <button class="primary-button btn btn-success" id="login-button" aria-label="Login">
                             로그인
                         </button>
                     </div>
